--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.application.name=demo
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+management.metrics.web.server.auto-time-requests=true
 
 # http://localhost:8080/actuator/prometheus
