--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ management.metrics.export.prometheus.enabled=true
 management.metrics.web.server.auto-time-requests=true
 
 # http://localhost:8080/actuator/prometheus
+
+otel.traces.exporter=jaeger
+otel.exporter.jaeger.endpoint=http://jaeger:14268/api/traces
+otel.resource.attributes=service.name=my-app
+tracing.url=http://jaeger:4318/v1/traces
